--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A majestic lion ">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A majestic lion" title="Majestic Lion">
+
+    <!-- Add a third img element -->
+    <img src="https://www.google.co.uk/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2F7%2F73%2FLion_waiting_in_Namibia.jpg%2F800px-Lion_waiting_in_Namibia.jpg&tbnid=Mqdk_nd8-OfYwM&vet=12ahUKEwj1w4usp8uBAxVUkScCHf33CMEQMygAegQIARB3..i&imgrefurl=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FLion&docid=0P9ZPIi_HU4dMM&w=800&h=600&itg=1&q=lion&hl=en&authuser=0&ved=2ahUKEwj1w4usp8uBAxVUkScCHf33CMEQMygAegQIARB3" alt="Another majestic lion" title="Another Majestic Lion">
   </body>
 </html>
